--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
@@ -20,33 +21,33 @@
 <hr />
 
 <section class="toolbar">
-	<button class="btn btn-link">i-refresh</button>
+	<button class="btn btn-link"><i class="fa fa-refresh"></i></button>
 	|
-	<button class="btn btn-link">i-list</button>
-	<button class="btn btn-link active">i-table</button>
-	<button class="btn btn-link">i-thumb</button>
-	<button class="btn btn-link">i-tree</button>
+	<button class="btn btn-link"><i class="fa fa-list"></i></button>
+	<button class="btn btn-link active"><i class="fa fa-table"></i></button>
+	<button class="btn btn-link"><i class="fa fa-image"></i></button>
+	<button class="btn btn-link"><i class="fa fa-tree"></i></button>
 	|
-	<button class="btn btn-link">i-recurse</button>
+	<button class="btn btn-link"><i class="fa fa-sitemap"></i></button>
 	|
-	<button class="btn btn-link">i-invert</button>
+	<button class="btn btn-link"><i class="fa fa-asterisk"></i></button>
 	|
-	<button class="btn btn-link">i-prev</button>
-	<button class="btn btn-link">i-next</button>
+	<button class="btn btn-link"><i class="fa fa-arrow-left"></i></button>
+	<button class="btn btn-link"><i class="fa fa-arrow-right"></i></button>
 	|
-	<button class="btn btn-link">i-pack</button>
-	<button class="btn btn-link">i-unpack</button>
+	<button class="btn btn-link"><i class="fa fa-compress"></i></button>
+	<button class="btn btn-link"><i class="fa fa-expand"></i></button>
 	|
-	<button class="btn btn-link">i-ftp</button>
-	<button class="btn btn-link">i-url</button>
+	<button class="btn btn-link"><i class="fa fa-cloud"></i></button>
+	<button class="btn btn-link"><i class="fa fa-download"></i></button>
 	|
-	<button class="btn btn-link">i-find</button>
-	<button class="btn btn-link">i-rename</button>
-	<button class="btn btn-link">i-sync</button>
-	<button class="btn btn-link">i-superpaste</button>
+	<button class="btn btn-link"><i class="fa fa-search"></i></button>
+	<button class="btn btn-link"><i class="fa fa-pencil"></i></button>
+	<button class="btn btn-link"><i class="fa fa-exchange"></i></button>
+	<button class="btn btn-link"><i class="fa fa-map-marker"></i></button>
 	|
-	<button class="btn btn-link">i-notepad</button>
-	<button class="btn btn-link">i-hidsys</button>
+	<button class="btn btn-link"><i class="fa fa-pencil-square-o"></i></button>
+	<button class="btn btn-link"><i class="fa fa-exclamation"></i></button>
 </section>
 
 <hr />
@@ -54,17 +55,10 @@
 <section class="drives">
 	<div class="row">
 		<div class="col">
-			<button class="btn btn-sm btn-link">i-disk c</button>
-			<button class="btn btn-sm btn-link">i-disk d</button>
-			<button class="btn btn-sm btn-link active">i-disk e</button>
-			<button class="btn btn-sm btn-link">i-web net</button>
-		</div>
-
-		<div class="col">
-			<button class="btn btn-sm btn-link">i-disk c</button>
-			<button class="btn btn-sm btn-link">i-disk d</button>
-			<button class="btn btn-sm btn-link active">i-disk e</button>
-			<button class="btn btn-sm btn-link">i-web net</button>
+			<button class="btn btn-sm btn-link"><i class="fa fa-hdd-o"></i> c</button>
+			<button class="btn btn-sm btn-link"><i class="fa fa-hdd-o"></i> d</button>
+			<button class="btn btn-sm btn-link active"><i class="fa fa-hdd-o"></i> e</button>
+			<button class="btn btn-sm btn-link"><i class="fa fa-globe"></i> net</button>
 		</div>
 	</div>
 </section>
@@ -77,7 +71,7 @@
 			<div class="medium">
 				<div class="row">
 					<div class="col-10">
-						<button class="btn btn-sm btn-secondary">i-disk e i-chevron-dn</button>
+						<button class="btn btn-sm btn-secondary"><i class="fa fa-hdd-o"></i> e <i class="fa fa-caret-down"></i></button>
 						[files] 65,623,892 k of 628,600,828 k free
 					</div>
 
@@ -91,18 +85,18 @@
 
 			<div class="tabs">
 				<button class="btn btn-sm btn-secondary">1977 animals</button>
-				<button class="btn btn-sm btn-secondary active">i-music Music</button>
+				<button class="btn btn-sm btn-secondary active"><i class="fa fa-music"></i> Music</button>
 			</div>
 			
 			<div class="card">
 				<div class="location">
 					<div class="row">
-						<div class="col-7 active">
-							i-chevron-down c:\Users\D\Music\*.*
+						<div class="col-10 active">
+							<i class="fa fa-caret-down"></i> c:\Users\D\Music\*.*
 						</div>
 						<div class="col">
-							<button class="btn btn-sm btn-link">i-star</button>
-							<button class="btn btn-sm btn-link">i-chevron-down</button>
+							<button class="btn btn-sm btn-link"><i class="fa fa-asterisk"></i></button>
+							<button class="btn btn-sm btn-link"><i class="fa fa-caret-down"></i></button>
 						</div>
 					</div>
 				</div>
@@ -111,8 +105,8 @@
 					<thead>
 						<tr>
 							<th><button class="btn btn-block btn-link">Name</button></th>
-							<th><button class="btn btn-block btn-link">Ext</button></th>
-							<th><button class="btn btn-block btn-link active">i-arrow-up Size</button></th>
+							<th><button class="btn btn-block btn-link active"><i class="fa fa-long-arrow-up"></i> Ext</button></th>
+							<th><button class="btn btn-block btn-link">Size</button></th>
 							<th><button class="btn btn-block btn-link">Date</button></th>
 							<th><button class="btn btn-block btn-link">Attr</button></th>
 						</tr>
@@ -126,14 +120,14 @@
 					</tfoot>
 					<tbody>
 						<tr>
-							<td>i-arrow-up [..]</td>
+							<td><i class="fa fa-level-up"></i> [..]</td>
 							<td></td>
 							<td>&lt;DIR&gt;</td>
 							<td>02/08/2017 00:10</td>
 							<td>0755</td>
 						</tr>
 						<tr>
-							<td>i-doc clan in da front</td>
+							<td><i class="fa fa-file-text"></i> clan in da front</td>
 							<td>txt</td>
 							<td>4,110</td>
 							<td>02/01/2017 00:07</td>
@@ -155,7 +149,7 @@
 			<div class="input-group input-group-sm">
 				<input class="form-control" />
 				<span class="input-group-btn">
-					<button class="btn btn-link">i-chevron-down</button>
+					<button class="btn btn-link"><i class="fa fa-caret-down"></i></button>
 				</span>
 			</div>
 		</div>
@@ -191,7 +185,7 @@
 </div>
 
 <script>
-$('.panes > .row > .col').each(function () {
+$('.drives > .row > .col, .panes > .row > .col').each(function () {
 	$(this).clone().insertAfter(this);
 });
 </script>
