--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 </section>
 
 <section class="prompt">
-	<div class="row">
-		<div class="col-4">
+	<div class="row no-gutters">
+		<div class="col-4 pr-1 text-right">
 			c:\Users\D\Music&gt;
 		</div>
 		<div class="col">
@@ -192,5 +192,6 @@ $('.drives > .row > .col, .panes > .row > .col').each(function () {
 $('hr').addClass('my-0');
 
 $('.directory th').addClass('p-0');
+$('.directory th .btn').addClass('text-left');
 $('.directory td').addClass('py-0');
 </script>
