--- a/index.html
+++ b/index.html
@@ -84,11 +84,17 @@
 			</div>
 
 			<div class="tabs">
-				<button class="btn btn-sm btn-secondary">1977 animals</button>
-				<button class="btn btn-sm btn-secondary active"><i class="fa fa-music"></i> Music</button>
+				<ul class="nav nav-tabs">
+					<li class="nav-item">
+						<a class="nav-link" href="#">1977 animals</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" href="#"><i class="fa fa-music"></i> Music</a>
+					</li>
+				</ul>
 			</div>
 			
-			<div class="card">
+			<div class="card border-top-0 rounded-0">
 				<div class="location">
 					<div class="row">
 						<div class="col-10 active">
@@ -194,4 +200,6 @@ $('hr').addClass('my-0');
 $('.directory th').addClass('p-0');
 $('.directory th .btn').addClass('text-left');
 $('.directory td').addClass('py-0');
+
+$('.tabs .nav-link').addClass('px-2 py-0');
 </script>
