Actions as button group

--- a/index.html
+++ b/index.html
@@ -163,28 +163,14 @@
 </section>
 
 <section class="actions">
-	<div class="row no-gutters">
-		<div class="col">
-			<button class="btn btn-sm btn-block">F3 View</button>
-		</div>
-		<div class="col">
-			<button class="btn btn-sm btn-block">F4 Edit</button>
-		</div>
-		<div class="col">
-			<button class="btn btn-sm btn-block">F5 Copy</button>
-		</div>
-		<div class="col">
-			<button class="btn btn-sm btn-block">F6 Move</button>
-		</div>
-		<div class="col">
-			<button class="btn btn-sm btn-block">F7 NewFolder</button>
-		</div>
-		<div class="col">
-			<button class="btn btn-sm btn-block">F8 Delete</button>
-		</div>
-		<div class="col">
-			<button class="btn btn-sm btn-block">Alt+F4 Exit</button>
-		</div>
+	<div class="btn-group btn-group-sm flex-row w-100">
+		<button class="btn btn-secondary w-100">F3 View</button>
+		<button class="btn btn-secondary w-100">F4 Edit</button>
+		<button class="btn btn-secondary w-100">F5 Copy</button>
+		<button class="btn btn-secondary w-100">F6 Move</button>
+		<button class="btn btn-secondary w-100">F7 NewFolder</button>
+		<button class="btn btn-secondary w-100">F8 Delete</button>
+		<button class="btn btn-secondary w-100">Alt+F4 Exit</button>
 	</div>
 </section>
 
