--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
 
 <section class="toolbar">
 	<button class="btn btn-link"><i class="fa fa-refresh"></i></button>
-	|
+	<i class="pipe">|</i>
 	<button class="btn btn-link"><i class="fa fa-list"></i></button>
 	<button class="btn btn-link active"><i class="fa fa-table"></i></button>
 	<button class="btn btn-link"><i class="fa fa-image"></i></button>
 	<button class="btn btn-link"><i class="fa fa-tree"></i></button>
-	|
+	<i class="pipe">|</i>
 	<button class="btn btn-link"><i class="fa fa-sitemap"></i></button>
-	|
+	<i class="pipe">|</i>
 	<button class="btn btn-link"><i class="fa fa-asterisk"></i></button>
-	|
+	<i class="pipe">|</i>
 	<button class="btn btn-link"><i class="fa fa-arrow-left"></i></button>
 	<button class="btn btn-link"><i class="fa fa-arrow-right"></i></button>
-	|
+	<i class="pipe">|</i>
 	<button class="btn btn-link"><i class="fa fa-compress"></i></button>
 	<button class="btn btn-link"><i class="fa fa-expand"></i></button>
-	|
+	<i class="pipe">|</i>
 	<button class="btn btn-link"><i class="fa fa-cloud"></i></button>
 	<button class="btn btn-link"><i class="fa fa-download"></i></button>
-	|
+	<i class="pipe">|</i>
 	<button class="btn btn-link"><i class="fa fa-search"></i></button>
 	<button class="btn btn-link"><i class="fa fa-pencil"></i></button>
 	<button class="btn btn-link"><i class="fa fa-exchange"></i></button>
 	<button class="btn btn-link"><i class="fa fa-map-marker"></i></button>
-	|
+	<i class="pipe">|</i>
 	<button class="btn btn-link"><i class="fa fa-pencil-square-o"></i></button>
 	<button class="btn btn-link"><i class="fa fa-exclamation"></i></button>
 </section>
@@ -76,7 +76,7 @@
 					</div>
 
 					<div class="col">
-						|
+						<i class="pipe">|</i>
 						<button class="btn btn-sm btn-link">\</button>
 						<button class="btn btn-sm btn-link">..</button>
 					</div>
@@ -189,3 +189,9 @@ $('.directory td').addClass('py-0');
 
 $('.tabs .nav-link').addClass('px-2 py-0');
 </script>
+
+<style>
+.pipe {
+	color: #ddd;
+}
+</style>
