--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@ $('.directory th').addClass('p-0');
 $('.directory th .btn').addClass('text-left');
 $('.directory td').addClass('py-0');
 
+$('.directory tbody td').addClass('border-top-0');
+
 $('.tabs .nav-link').addClass('px-2 py-0');
 
 $('.btn-link').hover(function () {
