--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
         height: 4.5em;
         left: 2em;
         position: absolute;
+        transition: transform 0.4s;
         top: -5.75em;
         width: 7em;
+      }
+
+      .Floppy:hover:after {
+        transform: translateX(-2em);
       }
     </style>
 
