Screen: From readme

--- a/index.html
+++ b/index.html
@@ -185,6 +185,16 @@
       </div>
     </div>
 
+    <section class="Screen container text-lg-center">
+      <h2>Finally, screenshot!</h2>
+
+      <a class="ball-pulse mx-lg-auto" href="https://github.com/makepost/acme-commander">
+        <div></div>
+        <div></div>
+        <div></div>
+      </a>
+    </section>
+
     <!-- http://tholman.com/github-corners/ -->
 
     <style id="Octo-style">
