--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
   <div class="App">
     <style id="Floppy-style">
       .Floppy {
+        align-items: center;
         background-color: #fff;
         border: solid currentColor;
         border-radius: 0.25em 1.25em 0.125em 0.125em;
         border-width: 5.75em 1.25em 0.25em;
-        display: inline-block;
+        display: inline-flex;
+        justify-content: center;
         height: 13.75em;
         position: relative;
         width: 13em;
@@ -145,7 +147,11 @@
 
     <header class="Header container">
       <div class="Header-floppy">
-        <div class="Floppy"></div>
+        <div class="Floppy">
+          <strong>
+            <a href="https://github.com/makepost/acme-commander/blob/master/LICENSE">MIT license</a>
+          </strong>
+        </div>
       </div>
 
       <div class="Header-content">
