Screen: Center on tablet

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       max-width: 840px;
     }
 
-    @media (min-width: 992px) {
+    @media (min-width: 768px) {
       .container {
         min-height: 100vh;
       }
@@ -198,10 +198,10 @@ acme-commander</pre>
       </div>
     </div>
 
-    <section class="Screen container text-lg-center">
+    <section class="Screen container text-md-center">
       <h2>Finally, screenshot!</h2>
 
-      <a class="ball-pulse mx-lg-auto" href="https://github.com/makepost/acme-commander">
+      <a class="ball-pulse mx-md-auto" href="https://github.com/makepost/acme-commander">
         <div></div>
         <div></div>
         <div></div>
