--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Acme Commander</title>
+
+  <meta name="description" content="Home page of Acme Commander, an orthodox file manager for modern Linux desktop. Two directory panels, SFTP access, familiar keyboard shortcuts, and more.">
+  <meta property="og:title" content="Acme Commander">
+  <meta property="og:description" content="Home page of Acme Commander, an orthodox file manager for modern Linux desktop. Two directory panels, SFTP access, familiar keyboard shortcuts, and more.">
+  <meta property="og:image" content="https://user-images.githubusercontent.com/20999066/32144815-0734201e-bcc7-11e7-86c8-a990a9e7ff1e.png">
+  <meta property="og:url" content="https://acme.js.org/">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#f8f8f8">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
   <link href="https://unpkg.com/loaders.css@0.1.2/loaders.min.css" rel="stylesheet">
+
   <style id="App-style">
     body {
       background-color: #f8f8f8;
