Header: Fix quick start

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
       <div class="Header-content">
         <h1 class="mb-4">Orthodox file manager for modern Linux desktop</h1>
 
-        <pre><span class="text-muted"># Ubuntu 17.10 or newer</span>
-sudo apt update &amp;&amp; sudo apt install <a href="https://gitlab.gnome.org/GNOME/gjs" title="JavaScript bindings for GNOME, based on Spidermonkey engine and GObject introspection.">gjs</a> nodejs python-gtk2
+        <pre><span class="text-muted"># Ubuntu Desktop 17.10 | <a href="https://github.com/makepost/acme-commander/blob/master/README.md#usage">Something else</a></span>
+sudo apt update &amp;&amp; sudo apt install git npm python-gtk2
 echo prefix=~/.local >> ~/.npmrc
 npm i -g acme-commander
 acme-commander</pre>
